# variational-monte-carlo-fys4411

./: '  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  banan.txt  blocking.py  changes.md  compile_project  examples.h  gradient_descent.cpp  gradientdescent.cpp  main.cpp  maininteracting.cpp  netrwsession.vim  parallelmaininteracting.cpp  particle.cpp  particle.h  resampling.py  run.py  sampler.cpp  sampler.h  ses.vim  session.vim  somefile.txt  system.cpp  system.h  tags  test.txt  time.txt  timing.cpp  variational-monte-carlo-fys4411.pro
Analysis/: Plottingtiming.ipynb  Plottingtiming.py  Plottingtimingbutactually.py  Writingtiming.py  blocking.py  cpp_utils.py  plot_acceptance_ratios.py  plot_derivative_timing.py  plot_gradient_search.py  plot_importance_sampling.py  plot_interaction.py  plot_task_b.py  plot_utils.py
Data/: 1timenum.txt  2timeana.txt  2timenum.txt  3timeana.txt  3timenum.txt  GD_3D.txt  GD_energy_per_particle_3D_interacTrue.txt  acceptance_impo.txt  acceptance_met.txt  derivativeTiming_3D.txt  detailed_GD_3D.txt  detailed_GD_energy_per_particle_3D_interacTrue.txt  detailed_gradientSearch_3D.txt  gradientSearch_3D.txt  hello.info  increase_mccs_3.txt  increase_mccs_3_eq.txt  increase_mccs_3_noeq.txt  simple_HO.txt  simple_HO_1D.txt  simple_HO_2D.txt  simple_HO_3D.txt  test.txt  time.txt
Hamiltonians/: hamiltonian.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h  harmonicoscillatorinteracting.cpp  harmonicoscillatorinteracting.h  heliumatom.cpp  heliumatom.h
InitialStates/: initialstate.cpp  initialstate.h  randomuniform.cpp  randomuniform.h
Math/: random.cpp  random.h
Project-1/Problem-1b/: main.cpp
Solvers/: gradientmetropolishastings.cpp  gradientmetropolishastings.h  metropolis.cpp  metropolis.h  metropolishastings.cpp  metropolishastings.h  montecarlo.cpp  montecarlo.h
WaveFunctions/: gaussian4.cpp  gaussian4.h  hydrogenlike.cpp  hydrogenlike.h  interactinggaussian.cpp  interactinggaussian.h  multiparticleho.cpp  multiparticleho.h  multiparticlehointeracting.cpp  multiparticlehointeracting.h  simplegaussian.cpp  simplegaussian.h  wavefunction.cpp  wavefunction.h
include/: hamiltonian.h  harmonicoscillator.h  initialstate.h  metropolis.h  metropolis_hastings.h  montecarlo.h  particle.h  random.h  sampler.h  simplegaussian.h  system.h  wavefunction.h
results/: 1b.txt  1c.txt  1d.txt  filesplitter.py  results_1b.csv  results_1c.csv  results_1d.csv
results/split_1b/: energies_1b_1.csv  energies_1b_10.csv  energies_1b_11.csv  energies_1b_12.csv  energies_1b_13.csv  energies_1b_14.csv  energies_1b_15.csv  energies_1b_16.csv  energies_1b_17.csv  energies_1b_18.csv  energies_1b_19.csv  energies_1b_2.csv  energies_1b_20.csv  energies_1b_21.csv  energies_1b_22.csv  energies_1b_23.csv  energies_1b_24.csv  energies_1b_25.csv  energies_1b_26.csv  energies_1b_27.csv  energies_1b_28.csv  energies_1b_29.csv  energies_1b_3.csv  energies_1b_30.csv  energies_1b_31.csv  energies_1b_32.csv  energies_1b_33.csv  energies_1b_34.csv  energies_1b_35.csv  energies_1b_36.csv  energies_1b_37.csv  energies_1b_38.csv  energies_1b_39.csv  energies_1b_4.csv  energies_1b_40.csv  energies_1b_41.csv  energies_1b_43.csv  energies_1b_5.csv  energies_1b_50.csv  energies_1b_58.csv  (+4 more)
results_1c/: results_1c.csv
src/: harmonicoscillator.cpp  initialstate.cpp  metropolis.cpp  metropolis_hastings.cpp  montecarlo.cpp  particle.cpp  sampler.cpp  simplegaussian.cpp  system.cpp  wavefunction.cpp
